<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- 父项目：Spring Boot 4.0，Spring AI 2.0.0 基于此版本构建 -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.0</version>
        <relativePath/>
    </parent>

    <groupId>com.example</groupId>
    <artifactId>spring-ai-demo</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <name>spring-ai-demo</name>
    <description>Spring AI 2.0.0 GA 学习 Demo 项目 - 包含聊天、提示词、结构化输出、多模态、函数调用、会话记忆、RAG 等核心功能</description>

    <properties>
        <!-- Spring AI 2.0.0 GA 版本 -->
        <spring-ai.version>2.0.0</spring-ai.version>
        <!-- Spring AI 2.0 要求 Java 21+ -->
        <java.version>21</java.version>
    </properties>

    <!-- 引入 Spring AI 2.0.0 BOM，统一管理所有 Spring AI 模块版本 -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Spring Boot Web 启动器：提供 REST API、内嵌服务器 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- Spring AI OpenAI 模型启动器：自动配置 OpenAI 兼容的 ChatModel 和 EmbeddingModel -->
        <!-- 支持任何兼容 OpenAI 接口的服务（OpenAI、智谱、通义千问、DeepSeek 等） -->
        <dependency>
            <groupId>org.springframework.ai</groupId>
            <artifactId>spring-ai-starter-model-openai</artifactId>
        </dependency>

        <!-- Spring AI 聊天记忆启动器：自动配置 ChatMemory 相关组件 -->
        <!-- 提供内存版 ChatMemory 实现和 JDBC 持久化支持 -->
        <dependency>
            <groupId>org.springframework.ai</groupId>
            <artifactId>spring-ai-starter-model-chat-memory</artifactId>
        </dependency>

        <!-- Spring AI 向量存储：提供 VectorStore 接口和 SimpleVectorStore 内存实现 -->
        <!-- 适合学习和小规模演示，生产环境建议使用 PgVector、Redis 等持久化实现 -->
        <dependency>
            <groupId>org.springframework.ai</groupId>
            <artifactId>spring-ai-vector-store</artifactId>
        </dependency>

        <!-- Spring AI 向量存储 Advisor：提供 QuestionAnswerAdvisor（RAG 顾问） -->
        <!-- 注意：2.0.0 中模块名从 spring-ai-advisors-vector-store 改为 spring-ai-vector-store-advisor -->
        <dependency>
            <groupId>org.springframework.ai</groupId>
            <artifactId>spring-ai-vector-store-advisor</artifactId>
        </dependency>

        <!-- Spring AI RAG 模块：提供检索增强生成的核心 API -->
        <dependency>
            <groupId>org.springframework.ai</groupId>
            <artifactId>spring-ai-rag</artifactId>
        </dependency>

        <!-- Spring Boot 配置参数校验 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- Lombok：减少样板代码 -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- Spring Boot 测试支持 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
